# world-dashboard

./: .gitignore  Cargo.toml  flake.nix  repomix-output.xml  result
config/: people.json
nix/: package.nix
src/: main.rs
